fixed border on collapsed west/east panels

--- a/pimcore/static6/css/ext-modifications.css
+++ b/pimcore/static6/css/ext-modifications.css
@@ -94,6 +94,7 @@
 
 .x-panel-header-default {
     background-color: #ececec;
+    border: none;
 }
 
 .x-panel-header-title-default {
